tests/ui/parser/issues/invalid-parse-format-issue-139104.stderr
error: invalid format string: invalid format string for argument `foo`
  --> $DIR/invalid-parse-format-issue-139104.rs:2:16
   |
LL |     println!("{foo:_1.4}", foo = 3.14);
   |                ^^^ invalid format specifier for this argument in format string

error: invalid format string: invalid format string for argument `foo`
  --> $DIR/invalid-parse-format-issue-139104.rs:3:16
   |
LL |     println!("{foo:1.4_1.4}", foo = 3.14);
   |                ^^^ invalid format specifier for this argument in format string

error: invalid format string: invalid format string for argument at index `0`
  --> $DIR/invalid-parse-format-issue-139104.rs:4:19
   |
LL |     println!("xxx{0:_1.4}", 1.11);
   |                   ^ invalid format specifier for this argument in format string

error: invalid format string: invalid format string for argument `foo`
  --> $DIR/invalid-parse-format-issue-139104.rs:5:16
   |
LL |     println!("{foo:_1.4", foo = 3.14);
   |                ^^^ invalid format specifier for this argument in format string

error: invalid format string: invalid format string for argument at index `0`
  --> $DIR/invalid-parse-format-issue-139104.rs:6:19
   |
LL |     println!("xxx{0:_1.4", 1.11);
   |                   ^ invalid format specifier for this argument in format string

error: invalid format string: expected `}`, found `0`
  --> $DIR/invalid-parse-format-issue-139104.rs:7:21
   |
LL |     println!("xxx{  0", 1.11);
   |                  -  ^ expected `}` in format string
   |                  |
   |                  because of this opening brace
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: aborting due to 6 previous errors

